correciones DTO y tipos de parametros